@@ -1,0 +1,10 @@
+Title: Views: Fixed "Cached" column when cache interval is reported to be 0
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.2.8p18
+Date: 1487603291
+Class: fix
+
+A "ZeroDivisionError (float division by zero)" exception could occur in views
+containing the "Cached agent data" painter.
