@@ -15,6 +15,7 @@
     * 4384 FIX: Fixed exception on start page when using Python < 2.5...
     * 4386 FIX: Fixed exception when creating links from service views to service group views...
     * 4388 FIX: Views: Fixed exception with host tag columns which tag has been deleted...
+    * 4389 FIX: Views: Fixed "Cached" column when cache interval is reported to be 0...
 
     WATO:
     * 4373 FIX: Timeperiods: iCal events with multiple days can now be imported
